Added line to auth and updated API wrapper
